<resources>
    <string name="app_name">health4u</string>
    <string name="tv1">NOMBRE DE LA CITA</string>
    <string name="tv2">HEALTH4U</string>
    <string name="tv3">PROGRAMAR CITA</string>
    <string name="btCancel">CANCELAR</string>
    <string name="btNext">SIGUIENTE</string>
    <string name="tv6">FECHA</string>
    <string name="tv7">HORA</string>
    <string name="tv8">DESCRIPCION</string>
    <string name="tv9">DIRECCION</string>
    <string name="btProgramarCita">PROGRAMAR CITA</string>
    <string name="btPerfil">CAMBIAR PERFIL</string>
    <string name="btProgramarDroga">PROGRAMAR MEDICAMENTO</string>
    <string name="btCalendar">VER CALENDARIO</string>
    <string name="btHistory">VER HISTORIAL</string>
    <string name="btDescripcion">DESCRIPCION</string>
    <string name="btAdress">DIRECCION</string>
    <string name="btGuardar">GUARDAR</string>
    <string name="tv12">OPCIONAL</string>
    <string name="tv13">Avenida,Calle,Nro</string>
    <string name="tv14">Ej:13 de Marzo de 2022</string>
    <string name="nomDoctor">Ej:Cardiólogo,Dermatólogo,etc</string>
    <string name="tv15">Notas u observaciones</string>

</resources>
